# gemmini-mlir

./: .gitignore  CMakeLists.txt  README.md
gemmini/include/: CMakeLists.txt  Gemmini.td  GemminiDialect.h  GemminiOps.h  Passes.h  Passes.td
gemmini/lib/: CMakeLists.txt  GemminiDialect.cpp
gemmini/lib/Conversion/: CMakeLists.txt
gemmini/lib/Conversion/ConvertLinalgToGemmini/: CMakeLists.txt  ConvertLinalgToGemmini.cpp
gemmini/lib/Conversion/LowerGemmini/: CMakeLists.txt  LowerGemmini.cpp
gemmini/lib/Transforms/: CMakeLists.txt  LegalizeForLLVMExport.cpp  LinalgToGemminiConversionPatterns.cpp
scripts/: apply_diff.sh  gemmini-instruction-set.diff
tools/: CMakeLists.txt  gemmini-opt.cpp
